--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     // based on prepared DOM, initialize echarts instance
     var myChart = echarts.init(document.getElementById('main'));
     
-    fetch("https://0.0.0.0:8000/data")
+    fetch("https://app-ca1cb40a-51ee-49d5-bd49-4b9ec84a4f33.cleverapps.io/data")
     .then(response => {
         return response.json();
     })
